welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:2: error: ';' expected but '(' found.
var lettre:String == litMessage()
                               ^BDR2:4: error: '=' expected but ';' found.
while (fini == false) {
^